k8s/workload/litomi/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litomi-web
spec:
  selector:
    app.kubernetes.io/name: litomi-web
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
