k8s/workload/litomi/base/web/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litomi-web
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: edge
      namespace: istio-ingress
      sectionName: root-https
  hostnames:
    - litomi.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: litomi-web
          port: 3000
